C1: HTML - add notes

--- a/course1/fundamentals.html
+++ b/course1/fundamentals.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Hello, World Page!</title>
+        <title> Hello, World Page!</title>i
     </head>
     <body>
         <p>Hello World!</p>
@@ -8,17 +8,33 @@
 </html>
 
 
-
-
-
 <!-- HTML - language used to make web pages
      . NOT a programming language, markup language
      . Specifies contents of web pages, used by browsers
-     . Specifies meaning or semantics
+     . Specifies meaning or semantics.
      
      Collaborative standard
      . First standard in 1993
      . Current standard in 2014
+ 
+ -->
+
+ <!-- Metadata and Sectioning Elements
+     . Metadata elements: contain information about the page. Ex: <html> tag,
+        <head> tag, and <title> tags.
+     . Sectioning elements which define regions of the page includes tags like <body>, <h1> and
+        <div>. 
+     . The <head> tag is also Metadata Element
+        Information about the page: title, scripts, CSS 
+     . The <title> tag is a Metadata Element too. 
+        Nested between the start and ending head tags. 
+     . The <body> tag is a Sectioning Element.
+        Contains all item seen on page
+     . The <h1> 
+        Section header
+        Also <h2>, <h3> ... <h6>
+     . The <div> defines section of web page.
+        
  
  -->
 
