--- a/course1/fundamentals.html
+++ b/course1/fundamentals.html
@@ -34,6 +34,9 @@
         Section header
         Also <h2>, <h3> ... <h6>
      . The <div> defines section of web page.
+        Useful for CSS.
+        
+
         
  
  -->
