--- a/course1/myinterests.html
+++ b/course1/myinterests.html
@@ -15,6 +15,7 @@
         <h3>Philosophy</h3>
         <h3>Religion</h3>
         <h3>Art</h3>
+        <a href="https://www.newyorker.com/culture/the-new-yorker-interview/a-lost-interview-with-clarice-lispector" target="blank_">Clarice - lost interviewer. </a>
      </div>   
 
 
